# OMPCountingSort

./: README.md
ProjectCountingSortFinal1/: CMakeLists.txt  README.md  configDoxy.file  estrai.py  file.bash
ProjectCountingSortFinal1/doxygenDocumentation/html/: dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals_defs.html  globals_func.html  graph_legend.html  index.html
ProjectCountingSortFinal1/doxygenDocumentation/html/d1/d45/: countingsort_8h__incl.map  countingsort_8h__incl.md5
ProjectCountingSortFinal1/doxygenDocumentation/html/d2/d60/: countingsort_8h.html  countingsort_8h_source.html
ProjectCountingSortFinal1/doxygenDocumentation/html/d3/d7a/: countingsort_8c__incl.map
ProjectCountingSortFinal1/doxygenDocumentation/html/search/: all_1.js  defines_0.js  defines_1.js  files_1.js  functions_0.js  functions_1.js
ProjectCountingSortFinal1/doxygenDocumentation/latex/: dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex
ProjectCountingSortFinal1/measureReport/2021-11-01.12_47_32/SIZE-100000-MAX-100000-O0/: SIZE-100000-NTH-00-O0.csv  SIZE-100000-NTH-01-O0.csv  SIZE-100000-NTH-02-O0.csv  SIZE-100000-NTH-04-O0.csv  SIZE-100000-NTH-08-O0.csv  SIZE-100000-NTH-16-O0.csv  SIZE-100000-NTH-32-O0.csv  psize-100000-O0-table.csv
ProjectCountingSortFinal1/measureReport/2021-11-01.12_47_32/SIZE-100000-MAX-100000-O1/: SIZE-100000-NTH-00-O1.csv  SIZE-100000-NTH-01-O1.csv  SIZE-100000-NTH-02-O1.csv  SIZE-100000-NTH-04-O1.csv  SIZE-100000-NTH-08-O1.csv  SIZE-100000-NTH-16-O1.csv  SIZE-100000-NTH-32-O1.csv  psize-100000-O1-table.csv
ProjectCountingSortFinal1/measureReport/2021-11-01.12_47_32/SIZE-100000-MAX-100000-O2/: SIZE-100000-NTH-00-O2.csv  SIZE-100000-NTH-01-O2.csv  SIZE-100000-NTH-02-O2.csv  SIZE-100000-NTH-04-O2.csv  SIZE-100000-NTH-08-O2.csv  SIZE-100000-NTH-16-O2.csv  SIZE-100000-NTH-32-O2.csv  psize-100000-O2-table.csv
ProjectCountingSortFinal1/measureReport/2021-11-01.12_47_32/SIZE-100000-MAX-100000-O3/: SIZE-100000-NTH-00-O3.csv  SIZE-100000-NTH-01-O3.csv  SIZE-100000-NTH-02-O3.csv  SIZE-100000-NTH-04-O3.csv  SIZE-100000-NTH-08-O3.csv  SIZE-100000-NTH-16-O3.csv  SIZE-100000-NTH-32-O3.csv  psize-100000-O3-table.csv
ProjectCountingSortFinal1/measureReport/2021-11-01.12_47_32/SIZE-10000000-MAX-100000-O0/: SIZE-10000000-NTH-00-O0.csv  SIZE-10000000-NTH-01-O0.csv  SIZE-10000000-NTH-02-O0.csv  SIZE-10000000-NTH-04-O0.csv  SIZE-10000000-NTH-08-O0.csv  SIZE-10000000-NTH-16-O0.csv  SIZE-10000000-NTH-32-O0.csv  psize-10000000-O0-table.csv
ProjectCountingSortFinal1/measureReport/2021-11-01.12_47_32/SIZE-10000000-MAX-100000-O1/: SIZE-10000000-NTH-00-O1.csv  SIZE-10000000-NTH-01-O1.csv  SIZE-10000000-NTH-02-O1.csv  SIZE-10000000-NTH-04-O1.csv  SIZE-10000000-NTH-08-O1.csv  SIZE-10000000-NTH-16-O1.csv  SIZE-10000000-NTH-32-O1.csv  psize-10000000-O1-table.csv
ProjectCountingSortFinal1/measureReport/2021-11-01.12_47_32/SIZE-10000000-MAX-100000-O2/: SIZE-10000000-NTH-00-O2.csv  SIZE-10000000-NTH-01-O2.csv  SIZE-10000000-NTH-02-O2.csv  SIZE-10000000-NTH-04-O2.csv  SIZE-10000000-NTH-08-O2.csv  SIZE-10000000-NTH-16-O2.csv  SIZE-10000000-NTH-32-O2.csv  psize-10000000-O2-table.csv
ProjectCountingSortFinal1/measureReport/2021-11-01.12_47_32/SIZE-10000000-MAX-100000-O3/: SIZE-10000000-NTH-00-O3.csv  SIZE-10000000-NTH-01-O3.csv  SIZE-10000000-NTH-02-O3.csv  SIZE-10000000-NTH-04-O3.csv  SIZE-10000000-NTH-08-O3.csv  SIZE-10000000-NTH-16-O3.csv  SIZE-10000000-NTH-32-O3.csv  psize-10000000-O3-table.csv
ProjectCountingSortFinal1/measureReport/2021-11-01.12_47_32/SIZE-5000-MAX-100000-O0/: SIZE-5000-NTH-00-O0.csv  SIZE-5000-NTH-01-O0.csv  SIZE-5000-NTH-02-O0.csv  SIZE-5000-NTH-04-O0.csv  SIZE-5000-NTH-08-O0.csv  SIZE-5000-NTH-16-O0.csv  SIZE-5000-NTH-32-O0.csv  psize-5000-O0-table.csv
ProjectCountingSortFinal1/measureReport/2021-11-01.12_47_32/SIZE-5000-MAX-100000-O1/: SIZE-5000-NTH-00-O1.csv  SIZE-5000-NTH-01-O1.csv  SIZE-5000-NTH-02-O1.csv  SIZE-5000-NTH-04-O1.csv  SIZE-5000-NTH-08-O1.csv  SIZE-5000-NTH-16-O1.csv  SIZE-5000-NTH-32-O1.csv  psize-5000-O1-table.csv
ProjectCountingSortFinal1/measureReport/2021-11-01.12_47_32/SIZE-5000-MAX-100000-O2/: SIZE-5000-NTH-00-O2.csv  SIZE-5000-NTH-01-O2.csv  SIZE-5000-NTH-02-O2.csv  SIZE-5000-NTH-04-O2.csv  SIZE-5000-NTH-08-O2.csv  SIZE-5000-NTH-16-O2.csv  SIZE-5000-NTH-32-O2.csv  psize-5000-O2-table.csv
ProjectCountingSortFinal1/measureReport/2021-11-01.12_47_32/SIZE-5000-MAX-100000-O3/: SIZE-5000-NTH-00-O3.csv  SIZE-5000-NTH-01-O3.csv  SIZE-5000-NTH-02-O3.csv  SIZE-5000-NTH-04-O3.csv  SIZE-5000-NTH-08-O3.csv  SIZE-5000-NTH-16-O3.csv  SIZE-5000-NTH-32-O3.csv  psize-5000-O3-table.csv
ProjectCountingSortFinal1/src/: countingsort.c  main.c
ProjectCountingSortFinal2/: Pipfile  README.md  file.bash
(+124 files in other folders)
